# cybersecurity-security-assessment-simulator

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/fastapi/api/: assets_generation.py  business_generation.py  business_owner_agent.py  main_app.py  security_assessment_assistant.py  security_template_retrieval.py  threats_generation.py
backend/fastapi/langgraph/ai_agents/: assets_generation.py  business_generation.py  business_owner_agent.py  security_assessment_assistant.py  threats_generation.py
backend/fastapi/langgraph/helpers/: file_operations.py  graph_state_classes.py  model_config.py  output_validation.py  validation.py  vector_db_operations.py
backend/fastapi/langgraph/input_files/: Assets_ZenithPoint.txt  Business_ZenithPoint.txt  SecurityAssessmentTemplate-FrontendFile.md  SecurityAssessmentTemplate-Guide.md
backend/fastapi/langgraph/nodes/: assets_generation.py  business_generation.py  business_owner_agent.py  threats_generation.py
backend/fastapi/langgraph/prompts/: assets_generation_prompt.py  business_generator_prompt.py  business_owner_prompt.py  security_assessment_assistant.py  threats_generation_prompt.py
frontend/: Start_Page.py
frontend/pages/: Assignment_1a_Business_Description.py  Assignment_1b_Business_Owner.py  Assignment_2.py  Assignment_2b_Teaching_Assistant.py  Submission_Page.py
tests/api/: system_test.py
