[project]
name = "cybersecurity-assessment-final-version"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "flask-limiter>=3.12",
    "flask-swagger-ui>=5.21.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
