[project]
name = "cybersecurity-assessment-final-version"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "flask-limiter>=3.12",
    "flask-swagger-ui>=5.21.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "uuid>=1.30",
]
